fixed the calendar on the date input disappearing in dark mode. only on chrome of course

--- a/src/global.css
+++ b/src/global.css
@@ -144,3 +144,6 @@ button.btn {
 
 
 
+.dark ::-webkit-calendar-picker-indicator {
+  filter: invert(1);
+}
